--- a/src/scss/mobile/header/address/address_content.scss
+++ b/src/scss/mobile/header/address/address_content.scss
@@ -17,6 +17,8 @@
         gap: 6px;
         background-color: rgba(255, 255, 255, 0);
         justify-content: center;
+        cursor: pointer;
+        position: relative;
     }
 
     &_mark {
@@ -37,6 +39,47 @@
         font-style: Medium;
         letter-spacing: -0.5px;
         vertical-align: middle;
+        color: #2D2D2D;
+    }
+
+    &_list {
+        width: 234px;
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.5490196078);
+        transform: translateY(25px);
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        border-radius: 25px;
+        box-shadow: 0px 12px 18px 0px #0000001A;
+    }
+
+    &_item {
+        border-radius: 16px;
+        border: none;
+        padding: 4px 0;
+        cursor: pointer;
+        background-color: #ffffff00;
+        transition: all 0.2s ease-in-out;
+
+        font-family: "Noto Sans", sans-serif;
+        font-weight: 500;
+        font-size: 14px;
+        font-style: Medium;
+        letter-spacing: -0.5px;
+        vertical-align: middle;
+        color: #2D2D2D;
+    }
+
+    &_item:hover {
+        background-color: #22833F26;
+        color: #22833F;
+    }
+
+    &_item:active {
+        background-color: #5CC37B;
+        color: #FFFFFF;
     }
 }
 
@@ -46,5 +89,25 @@
         flex-direction: column;
         gap: 16px;
         background-color: rgba(255, 255, 255, 0);
+    }
+}
+
+@media screen and (min-width: 1672px) {
+    .header__address {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 44px;
+        background-color: rgba(255, 255, 255, 0);
+        transform: translateY(-10px);
+
+        &_text {
+            font-size: 16px;
+        }
+
+        &_points {
+            align-items: center;
+        }
     }
 }
