--- a/src/scss/mobile/header/address/btn/address_btn.scss
+++ b/src/scss/mobile/header/address/btn/address_btn.scss
@@ -8,5 +8,6 @@
         background-size: contain;
         border: none;
         background-color: rgba(255, 255, 255, 0);
+        cursor: pointer;
     }
 }
