--- a/src/scss/mobile/header/application/btn/application_btn.scss
+++ b/src/scss/mobile/header/application/btn/application_btn.scss
@@ -15,5 +15,15 @@
         display: flex;
         align-items: center;
         gap: 8px;
+        cursor: pointer;
+    }
+}
+
+@media screen and (min-width: 1672px) {
+    .header__application {
+
+        &_btn {
+            padding: 12px 16px;
+        }
     }
 }
