--- a/src/scss/mobile/header/fringe.scss
+++ b/src/scss/mobile/header/fringe.scss
@@ -17,6 +17,10 @@
         top: 5px;
         background-color: rgba(255, 255, 255, 0);
     }
+
+    &__logo_svg {
+        background-color: rgba(255, 255, 255, 0);
+    }
 }
 
 @media screen and (min-width: 1194px) {
@@ -24,7 +28,7 @@
         
         background-image: url(/src/assets/svg/fringe_laptop.svg);
         max-width: 605px;
-        margin-top: -50px;
+        transform: translateY(-28px);
         
 
         &__logo {
@@ -32,6 +36,19 @@
         }
     }
 }
+
+@media screen and (min-width: 1672px) {
+    .fringe {
+        transform: translateY(-25px);
+        height: 80px;
+
+        &__logo {
+            display: none;
+        }
+    }
+}
+
+
 
 
 
