--- a/src/scss/mobile/header/header.scss
+++ b/src/scss/mobile/header/header.scss
@@ -4,18 +4,21 @@
     right: 0;
     top: 0;
     background-color: #ffffff00;
+    z-index: 1000;
 
     &__content {
         padding: 0 10px;
         padding-bottom: 10px;
         background-color: #ffffff8c; 
-        border-radius: 12px 12px 0 0;
+        border-radius: 12px 12px 16px 16px;
         display: flex;
         justify-content: space-between;
         position: relative;
         backdrop-filter: blur(10px);
         max-width: 500px;
         margin: 0 auto;
+        box-shadow: 0px 8px 18px 0px #0000001A;
+
     }
 
     &__container {
