--- a/src/scss/mobile/header/__mobileMenu/_address/_address.scss
+++ b/src/scss/mobile/header/__mobileMenu/_address/_address.scss
@@ -1,5 +1,6 @@
 .header__mobileMenu {
     
+    display: block;
     transition: all 0.3s ease-in-out;
     transform: translateY(-120%);
 
@@ -11,6 +12,12 @@
         background-color: rgb(255, 255, 255);
         border-radius: 16px 16px 0 0 ;
         box-shadow: 0px 8px 18px 0px #0000001A;
+    }
+}
+
+@media screen and (min-width: 1194px) {
+    .header__mobileMenu {
+        display: none;
     }
 }
 
