--- a/src/scss/mobile/container/container.scss
+++ b/src/scss/mobile/container/container.scss
@@ -12,3 +12,12 @@
     }
     
 }
+
+@media screen and (min-width: 1672px) {
+
+    .container {
+        
+        max-width: 1672px;
+    }
+    
+}
