--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,6 +29,7 @@
 @use './mobile/header/__mobileMenu/_application/application';
 
 @use './mobile/main/main.scss';
+@use './mobile/main/widget1/main__widget1.scss';
 @use './mobile/main/widget1/__slogan/_slogan';
 @use './mobile/main/widget1/__help/_help';
 @use './mobile/main/widget1/__skull/_skull';
