--- a/src/scss/mobile/main/main.scss
+++ b/src/scss/mobile/main/main.scss
@@ -8,6 +8,7 @@
         padding: 30px 10px;
         margin-top: 45px;
         background-color: #FFF;
+        position: relative;
     }
 }
 
@@ -15,15 +16,25 @@
 
     .main {
 
-    &__content {
-        
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-        padding: 30px 10px;
-        margin-top: 111px;
-       
+        &__content {
+            
+            flex-direction: row;
+            margin-top: 111px;
+            padding-bottom: 90px;
+        }
     }
 }
-    
+
+@media screen and (min-width: 1194px) {
+
+    .main {
+
+        &__content {
+            
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 111px;
+            padding-bottom: 90px;
+        }
+    }
 }
