--- a/src/scss/mobile/main/widget1/__slogan/__slogan.scss
+++ b/src/scss/mobile/main/widget1/__slogan/__slogan.scss
@@ -32,6 +32,14 @@
         }
     }
 
+    @media screen and (min-width: 1672px) {
+
+        &_text1 {
+
+            font-size: 48px;
+        }
+    }
+
     &_text2 {
 
         font-family: "Noto Sans", sans-serif;
@@ -49,6 +57,14 @@
         &_text2 {
 
             font-size: 36px;
+        }
+    }
+
+    @media screen and (min-width: 1672px) {
+
+        &_text2 {
+
+            font-size: 48px;
         }
     }
 }
