--- a/src/scss/mobile/main/widget3/__slogan2/__slogan2.scss
+++ b/src/scss/mobile/main/widget3/__slogan2/__slogan2.scss
@@ -1,75 +1,124 @@
 .widget3__slogan {
 
-    display: flex;
-    padding: 14px 12px;
-    box-shadow: 0px 8px 18px 0px #0000001A;
-    border-radius: 16px;
-    background-color: #FFFFFF;
-    gap: 8px;
-    transform: translateY(-18px);
+  display: flex;
+  padding: 14px 12px;
+  box-shadow: 0 8px 18px 0 #0000001A;
+  border-radius: 16px;
+  background-color: #FFFFFF;
+  gap: 8px;
+  transform: translateY(-18px);
     
+  &_text {
+
+      margin-left: auto;
+      font-family: "Noto Sans", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 100%;
+      letter-spacing: 0;
+      vertical-align: middle;
+      background-color: #ffffff00;
+      max-width: 249px;
+  }
+
+  @media screen and (min-width: 1672px) {
+
     &_text {
 
-        margin-left: auto;
-        font-family: "Noto Sans", sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 100%;
-        letter-spacing: 0px;
-        vertical-align: middle;
-        background-color: #ffffff00;
-        max-width: 249px;
+      margin: auto 0;
+      max-width: 320px;
+      font-size: 16px;
     }
+  }
 
-    &_text-bold {
+  &_text-bold {
 
-        font-weight: 700;
-        background-color: #ffffff00;
-    }
+      font-weight: 700;
+      background-color: #ffffff00;
+  }
+
+  &_statue {
+
+      width: 60px;
+      height: 60px;
+      background-image: url(/src/assets/svg/statue.svg);
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      position: relative;
+  }
+
+  @media screen and (min-width: 1672px) {
 
     &_statue {
 
-        width: 60px;
-        height: 60px;
-        background-image: url(/src/assets/svg/statue.svg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        position: relative;
+      width: 80px;
+      height: 80px;
     }
+  }
+
+
+  &_statueUp {
+
+      width: 27px;
+      height: 73px;
+      background-image: url(/src/assets/svg/statueUp.svg);
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-color: #ffffff00;
+      position: absolute;
+      left: 16px;
+      top: -25px;
+  }
+
+  @media screen and (min-width: 1672px) {
 
     &_statueUp {
 
-        width: 27px;
-        height: 73px;
-        background-image: url(/src/assets/svg/statueUp.svg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-color: #ffffff00;
-        position: absolute;
-        left: 16px;
-        top: -25px;
+      width: 41px;
+      height: 125px;
+      left: 20px;
+      top: -55px;
     }
+  }
+
+  &_rayStatue {
+
+      width: 40px;
+      height: 24px;
+      background-image: url(/src/assets/svg/rayOfStatue.svg);
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-color: #ffffff00;
+      position: absolute;
+      top: 22px;
+  }
+
+  @media screen and (min-width: 1672px) {
 
     &_rayStatue {
 
-        width: 40px;
-        height: 24px;
-        background-image: url(/src/assets/svg/rayOfStatue.svg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-color: #ffffff00;
-        position: absolute;
-        top: 22px;
+      width: 57px;
+      height: 34px;
+      top: 35px;
     }
+  }
 }
 
 @media screen and (min-width: 1194px) {
     
-    .widget3__slogan {
+  .widget3__slogan {
 
-        transform: translateY(-60px) translateX(-40px);
-    }
+    transform: translateY(-60px) translateX(-40px);
+  }
+}
+
+@media screen and (min-width: 1672px) {
+
+  .widget3__slogan {
+
+    transform: translateY(-70px) translateX(-120px);
+  }
 }
