--- a/src/scss/mobile/main/widget3/__video/__video.scss
+++ b/src/scss/mobile/main/widget3/__video/__video.scss
@@ -19,3 +19,13 @@
     }
         
 }
+
+@media screen and (min-width: 1672px) {
+
+    .widget3__video {
+
+        width: 237px;
+        height: 514px;
+    }
+
+}
