--- a/src/scss/mobile/header/__mobileMenu/_address/_address.scss
+++ b/src/scss/mobile/header/__mobileMenu/_address/_address.scss
@@ -11,7 +11,7 @@
         padding: 28px 0;
         background-color: rgb(255, 255, 255);
         border-radius: 16px 16px 0 0 ;
-        box-shadow: 0px 8px 18px 0px #0000001A;
+        box-shadow: 0 8px 18px 0 #0000001A;
     }
 }
 
