--- a/src/scss/mobile/header/__mobileMenu/_application/_application.scss
+++ b/src/scss/mobile/header/__mobileMenu/_application/_application.scss
@@ -7,13 +7,12 @@
     gap: 30px;
     background-color: #FFF;
     border-radius: 0 0 16px 16px;
-    box-shadow: 0px 8px 18px 0px #0000001A;
+    box-shadow: 0 8px 18px 0 #0000001A;
 
 
     &-btn {
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 16px;
         width: 95%;
         letter-spacing: -0.5px;
@@ -41,9 +40,8 @@
     }
 
     &-text {
-        font-family: "Noto Sans";
+        font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 14px;
         letter-spacing: -0.5px;
         vertical-align: middle;
