--- a/src/scss/mobile/header/__mobileMenu/_nav/_nav.scss
+++ b/src/scss/mobile/header/__mobileMenu/_nav/_nav.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #FFF;
-    box-shadow: 0px 8px 18px 0px #0000001A; 
+    box-shadow: 0 8px 18px 0 #0000001A;
 
     &-list {
         list-style-type: none;
@@ -18,7 +18,6 @@
     &-btn {
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 20px;
         letter-spacing: -0.5px;
         padding: 12px;
