--- a/src/scss/mobile/header/address/address_content.scss
+++ b/src/scss/mobile/header/address/address_content.scss
@@ -37,7 +37,6 @@
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
         font-size: 14px;
-        font-style: Medium;
         letter-spacing: -0.5px;
         vertical-align: middle;
         color: #2D2D2D;
@@ -48,14 +47,13 @@
         position: absolute;
         background-color: rgba(255, 255, 255, 0.5490196078);
         transform: translateY(-200%);
-        position: absolute;
         top: 30px;
         padding: 16px;
         display: flex;
         flex-direction: column;
         gap: 16px;
         border-radius: 25px;
-        box-shadow: 0px 12px 18px 0px #0000001A;
+        box-shadow: 0 12px 18px 0 #0000001A;
         transition: all 0.4s ease-in-out;
         opacity: 0;
         z-index: 997;
@@ -72,7 +70,6 @@
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
         font-size: 14px;
-        font-style: Medium;
         letter-spacing: -0.5px;
         vertical-align: middle;
         color: #2D2D2D;
