--- a/src/scss/mobile/header/block/header_block.scss
+++ b/src/scss/mobile/header/block/header_block.scss
@@ -31,9 +31,8 @@
     }
 
     &_text {
-        font-family: "Noto Sans";
+        font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 11px;
         letter-spacing: -0.5px;
         vertical-align: middle;
