--- a/src/scss/mobile/header/header.scss
+++ b/src/scss/mobile/header/header.scss
@@ -3,13 +3,11 @@
     left: 0;
     right: 0;
     top: 0;
-    background-color: #ffffff00;
     z-index: 1000;
 
     &__content {
-        padding: 0 10px;
-        padding-bottom: 10px;
-        background-color: #ffffff00; 
+        padding: 0 10px 10px;
+      background-color: rgb(229 229 229 / 30%);
         border-radius: 12px 12px 16px 16px;
         display: flex;
         justify-content: space-between;
@@ -17,23 +15,21 @@
         backdrop-filter: blur(10px);
         max-width: 500px;
         margin: 0 auto;
-        box-shadow: 0px 8px 18px 0px #0000001A;
+        box-shadow: 0 8px 18px 0 #0000001A;
     }
 
     &__container {
-        padding: 0 16px;
-        padding-bottom: 10px;
-        background-color: #ffffff00;
-        
+      padding: 0 16px 0;
+      background-color: #ffffff00;
+
     }
 }
 
 @media screen and (min-width: 1194px) {
     .header {
         &__content {
-            padding: 20px;
-            padding-bottom: 5px;
-            max-width: 1162px;
+          padding: 20px 20px 5px;
+          max-width: 1168px;
         }
     }
 }
@@ -41,9 +37,8 @@
 @media screen and (min-width: 1672px) {
     .header {
         &__content {
-            padding: 20px;
-            padding-bottom: 5px;
-            max-width: 1640px;
+          padding: 20px 20px 5px;
+          max-width: 1640px;
         }
     }
 }
