--- a/src/scss/mobile/header/nav/btns/header__nav_btn.scss
+++ b/src/scss/mobile/header/nav/btns/header__nav_btn.scss
@@ -9,31 +9,28 @@
 
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 12px;
         letter-spacing: -0.5px;
         color:#2D2D2D;
     }
 
     &_btnRight {
-        width: 94px;
-        padding: 12px 16px;
-        padding-left: 8px;
-        border-radius: 16px;
-        border: none;
-        background-image: url('/src/assets/svg/btns/roundedBtn_right.svg');
-        background-color: #ffffff00;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        cursor: pointer;
+      width: 94px;
+      padding: 12px 16px 12px 8px;
+      border-radius: 16px;
+      border: none;
+      background-image: url('/src/assets/svg/btns/roundedBtn_right.svg');
+      background-color: #ffffff00;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      cursor: pointer;
 
-        font-family: "Noto Sans", sans-serif;
-        font-weight: 500;
-        font-style: Medium;
-        font-size: 12px;
-        letter-spacing: -0.5px;
-        color:#2D2D2D;
+      font-family: "Noto Sans", sans-serif;
+      font-weight: 500;
+      font-size: 12px;
+      letter-spacing: -0.5px;
+      color:#2D2D2D;
     }
 
     &_btnLeft {
@@ -49,7 +46,6 @@
 
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 12px;
         letter-spacing: -0.5px;
         color:#2D2D2D;
