--- a/src/scss/mobile/main/main.scss
+++ b/src/scss/mobile/main/main.scss
@@ -1,14 +1,15 @@
 .main {
 
+  background-color: #F7F6FB;
+
     &__content {
-        
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        padding: 30px 10px;
-        margin-top: 45px;
-        background-color: #FFF;
-        position: relative;
+
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      background-color: #FFF;
+      position: relative;
+      padding: 80px 10px 0;
     }
 }
 
@@ -17,24 +18,22 @@
     .main {
 
         &__content {
-            
+
             flex-direction: row;
-            margin-top: 111px;
+            padding-top: 140px;
             padding-bottom: 90px;
+            justify-content: space-between;
         }
     }
 }
 
-@media screen and (min-width: 1194px) {
+@media screen and (min-width: 1672px) {
 
     .main {
 
         &__content {
-            
-            flex-direction: row;
-            justify-content: space-between;
-            margin-top: 111px;
-            padding-bottom: 90px;
+
+          padding: 160px 16px 0;
         }
     }
 }
