--- a/src/scss/mobile/main/widget2/__phone/__phone.scss
+++ b/src/scss/mobile/main/widget2/__phone/__phone.scss
@@ -11,7 +11,6 @@
 
         font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 12px;
         line-height: 16px;
         letter-spacing: -0.5px;
@@ -22,9 +21,8 @@
 
     &_text2 {
 
-        font-family: "Noto Sans";
+        font-family: "Noto Sans", sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 14px;
         line-height: 20px;
         letter-spacing: -0.5px;
