--- a/src/scss/mobile/main/widget2/__stoke/__stoke.scss
+++ b/src/scss/mobile/main/widget2/__stoke/__stoke.scss
@@ -9,11 +9,18 @@
 
         font-family: "Noto Sans" ,sans-serif;
         font-weight: 500;
-        font-style: Medium;
         font-size: 22px;
         line-height: 24px;
-        letter-spacing: 0px;
+        letter-spacing: 0;
         background-color: #ffffff00;
+    }
+
+    @media screen and (min-width: 1672px) {
+
+      &_text1 {
+
+        font-size: 24px;
+      }
     }
 
     &_list {
