--- a/src/scss/mobile/main/widget2/_phoneBtn/_phoneBtn.scss
+++ b/src/scss/mobile/main/widget2/_phoneBtn/_phoneBtn.scss
@@ -6,7 +6,7 @@
         height: 46px;
         background-color: #22833F;
         padding: 12px 16px;
-        box-shadow: 0px 4px 12px 0px #00000040;
+        box-shadow: 0 4px 12px 0 #00000040;
         border-radius: 25px 0 0 25px;
         border: none;
 
