--- a/src/scss/mobile/main/widget2/widget2.scss
+++ b/src/scss/mobile/main/widget2/widget2.scss
@@ -15,3 +15,11 @@
         order: 1;
     }
 }
+
+@media screen and (min-width: 1672px) {
+
+    .main__widget2 {
+
+        transform: translateY(-90px);
+    }
+}
