--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -1,4 +1,9 @@
 @font-face {
-    font-family: 'Noto Sans';
-    src: url('./Noto_Sans/NotoSans-VariableFont_wdth\,wght.ttf') format('woff2');
+  font-family: 'Noto Sans';
+  src: url("./Noto_Sans/NotoSans-VariableFont_wdth\,wght.ttf") format('woff2');
+}
+
+@font-face {
+  font-family: 'Work Sans';
+  src: url("./work-sans/WorkSans-VariableFont_wdth\,wght.ttf") format('woff2');
 }
