--- a/src/scss/mobile/main/widget2/__stoke/__stoke.scss
+++ b/src/scss/mobile/main/widget2/__stoke/__stoke.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    background-color: #ffffff00;
 
     &_text1 {
 
@@ -12,7 +11,8 @@
         font-size: 22px;
         line-height: 24px;
         letter-spacing: 0;
-        background-color: #ffffff00;
+        color: #2D2D2D;
+
     }
 
     @media screen and (min-width: 1672px) {
@@ -28,7 +28,6 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
-        background-color: #ffffff00;
     }
 
     &_item {
@@ -36,6 +35,5 @@
         display: flex;
         gap: 8px;
         align-items: center;
-        background-color: #ffffff00;
     }
 }
