--- a/src/scss/mobile/help/__items/__items.scss
+++ b/src/scss/mobile/help/__items/__items.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  z-index: 2;
 
 }
 
@@ -55,6 +56,24 @@
     background-color: rgba(255,255,255,0);
   }
 
+  @media screen and (min-width: 1194px) {
+
+    &_textContainer {
+
+      gap: 16px;
+      max-width: 453px;
+    }
+  }
+
+  @media screen and (min-width: 1672px) {
+
+    &_textContainer {
+
+      gap: 16px;
+      max-width: 630px;
+    }
+  }
+
   &_text-title {
 
     color: #2D2D2D;
@@ -67,6 +86,14 @@
     background-color: rgba(255,255,255,0);
   }
 
+  @media screen and (min-width: 1194px) {
+
+    &_text-title {
+
+      font-size: 24px;
+    }
+  }
+
   &_text-description {
 
     color: #2D2D2D;
@@ -77,6 +104,14 @@
     letter-spacing: 0.4px;
     vertical-align: middle;
     background-color: rgba(255,255,255,0);
+  }
 
+  @media screen and (min-width: 1194px) {
+
+    &_text-description {
+
+      font-size: 16px;
+      font-weight: 500;
+    }
   }
 }
