--- a/src/scss/mobile/main/main.scss
+++ b/src/scss/mobile/main/main.scss
@@ -10,6 +10,7 @@
       background-color: #FFF;
       position: relative;
       padding: 80px 10px 0;
+      border-radius: 0 0 0 16px;
     }
 }
 
