--- a/src/scss/mobile/main/widget1/__skull/__skull.scss
+++ b/src/scss/mobile/main/widget1/__skull/__skull.scss
@@ -6,7 +6,6 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  background-color: #ffffff00;
   position: relative;
   margin: 0 auto;
   transform: translateY(20px);
@@ -21,7 +20,6 @@
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
-        background-color: #ffffff00;
         display: flex;
         padding: 6px 11px 6px 6px;
         justify-content: space-between;
@@ -51,7 +49,6 @@
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
-        background-color: #ffffff00;
         display: flex;
         padding: 6px 6px 6px 16px;
         justify-content: space-between;
@@ -76,7 +73,6 @@
 
         width: 12px;
         height: 12px;
-        background-color: #ffffff00;
         background-image: url(/src/assets/svg/tooth.svg);
         background-position: center center;
         background-repeat: no-repeat;
@@ -99,6 +95,7 @@
         font-size: 16px;
         line-height: 32px;
         vertical-align: middle;
+        color: #2D2D2D;
     }
 
     @media screen and (min-width: 1672px) {
@@ -126,7 +123,7 @@
         position: absolute;
         width: 800px;
         height: 300px;
-        top: 200px;
+        top: 290px;
         
     }
 }
