--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -50,3 +50,5 @@
 @use './mobile/help/__title/__title.scss';
 @use './mobile/help/__items/_items.scss';
 @use './mobile/help/__certificate/_certificate.scss';
+
+@use './blocks/index.scss' as *;
