--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -79,3 +79,4 @@
 @use './mobile/footer/__links/_links.scss' as *;
 @use './mobile/footer/__license/_licence.scss' as *;
 @use './mobile/footer/__warning/_warning.scss' as *;
+@use './mobile/footer/__fringe/_fringe.scss' as *;
