--- a/src/scss/mobile/header/__mobileMenu/__mobileMenu.scss
+++ b/src/scss/mobile/header/__mobileMenu/__mobileMenu.scss
@@ -1,11 +1,13 @@
 .header__mobileMenu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 56px;
-    left: 0;
-    right: 0;
-    padding: 0 16px; 
-    max-width: 520px;
-    margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 56px;
+  left: 0;
+  right: 0;
+  max-width: 500px;
+  margin: 0 auto;
+  box-shadow: 0 8px 18px 0 #0000001A;
+  border-radius: 16px;
 }
