--- a/src/scss/mobile/header/__mobileMenu/_address/_address.scss
+++ b/src/scss/mobile/header/__mobileMenu/_address/_address.scss
@@ -3,15 +3,14 @@
     display: block;
     transition: all 0.3s ease-in-out;
     transform: translateY(-120%);
+    background-color: #ffffff;
 
     &_address {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 28px 0;
-        background-color: rgb(255, 255, 255);
         border-radius: 16px 16px 0 0 ;
-        box-shadow: 0 8px 18px 0 #0000001A;
     }
 }
 
