--- a/src/scss/mobile/header/__mobileMenu/_nav/_nav.scss
+++ b/src/scss/mobile/header/__mobileMenu/_nav/_nav.scss
@@ -3,8 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #FFF;
-    box-shadow: 0 8px 18px 0 #0000001A;
 
     &-list {
         list-style-type: none;
@@ -12,18 +10,32 @@
         flex-direction: column;
         align-items: center;
         gap: 16px;
-        background-color: #ffffff00;
     }
 
     &-btn {
-        font-family: "Noto Sans", sans-serif;
-        font-weight: 500;
-        font-size: 20px;
-        letter-spacing: -0.5px;
-        padding: 12px;
-        width: 100%;
-        border: none;
-        background-color: #ffffff00;
+
+      font-family: "Noto Sans", sans-serif;
+      font-weight: 500;
+      font-size: 20px;
+      letter-spacing: -0.5px;
+      padding: 12px 20px;
+      border-radius: 25px;
+      width: 100%;
+      border: none;
+      background-color: #ffffff00;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+
+        background-color: #22833F26;
+        color: #22833F;
+      }
+
+      &:active {
+
+        background-color: #22833F;
+        color: #FFFFFF;
+      }
     }
 
     &-item {
