--- a/src/scss/mobile/header/btns/header__menuBtn.scss
+++ b/src/scss/mobile/header/btns/header__menuBtn.scss
@@ -1,18 +1,21 @@
 .header__menuBtn {
-    width: 44px;
-    height: 44px;
-    background-color: #F7F6FB;
-    border: none;
-    border-radius: 12px;
-    background-image: url(/src/assets/svg/strokes.svg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 24px;
-    margin-top: auto;
-    cursor: pointer;
-    display: block;
-    transform: translateY(5px);
-    transition: all 0.2s ease-in-out;
+
+  width: 44px;
+  height: 44px;
+  background-color: #F7F6FB;
+  border: none;
+  border-radius: 12px;
+  background-image: url(/src/assets/svg/strokes.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 24px;
+  margin-top: auto;
+  cursor: pointer;
+  display: block;
+  transform: translateY(5px);
+  transition: all 0.2s ease-in-out;
+  -webkit-tap-highlight-color: transparent;
+
 }
 
 @media screen and (min-width: 1194px) {
