--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -77,6 +77,7 @@
 @use './mobile/calculation/__item/_item.scss' as *;
 
 @use './mobile/footer/footer.scss' as *;
+@use './mobile/footer/__map/_map';
 @use './mobile/footer/__feedback/_feedback.scss' as *;
 @use './mobile/footer/__nav/_nav.scss' as *;
 @use './mobile/footer/__links/_links.scss' as *;
