--- a/src/scss/mobile/footer/__fringe/__fringe.scss
+++ b/src/scss/mobile/footer/__fringe/__fringe.scss
@@ -1,6 +1,5 @@
 .footer__fringe {
-
-
+  z-index: 3;
   position: absolute;
   bottom: 0;
   background-image: url("/src/assets/svg/fringe_footerMobile.svg");
