--- a/src/scss/mobile/footer/__warning/__warning.scss
+++ b/src/scss/mobile/footer/__warning/__warning.scss
@@ -15,3 +15,10 @@
     color: #2D2D2D;
   }
 }
+
+@media (min-width: 1194px) {
+  .footer__warning{
+    grid-area: infoText;
+    justify-content: center;
+  }
+}
