--- a/src/scss/mobile/footer/__feedback/__feedback.scss
+++ b/src/scss/mobile/footer/__feedback/__feedback.scss
@@ -7,7 +7,7 @@
   gap: 16px;
 
   &_btns {
-
+    width: 100%;
     display: flex;
     gap: 12px;
     align-items: center;
@@ -93,6 +93,34 @@
       letter-spacing: -0.5px;
       vertical-align: middle;
       color: #2D2D2D;
+    }
+  }
+}
+
+
+@media (min-width: 1194px) {
+  .footer__feedback{
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    grid-area: infoBlock;
+
+    &_btn-phone{
+      padding: 12px 32px;
+    }
+
+    &_addresses{
+      width: fit-content;
+
+      &-item{
+        font-size: 14px;
+        line-height: 20px;
+      }
+    }
+
+    &_btns{
+      width: auto;
+      gap: 16px;
     }
   }
 }
