--- a/src/scss/mobile/footer/footer.scss
+++ b/src/scss/mobile/footer/footer.scss
@@ -5,21 +5,39 @@
 
   &__content {
 
-    background-color: #FFFFFF;
     border-radius: 25px;
-    padding: 10px 10px 98px;
+    // padding: 0px 0px 98px;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 0px;
     position: relative;
     align-items: center;
   }
 
   &__main {
-
     display: flex;
     flex-direction: column;
     gap: 32px;
+    padding: 0px 10px 98px 10px;
+    border-radius: 25px;
+    background-color: #FFFFFF;
+    z-index: 2;
   }
 }
 
+@media (min-width: 1194px) {
+  .footer{
+    &__main{
+      padding: 20px 20px 98px 20px;
+      display: grid;
+      gap: 32px;
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto auto auto;
+      grid-template-areas: 
+      "infoBlock infoBlock"
+      "license navBtns"
+      "license cookie"
+      "infoText infoText";
+    }
+  }
+}
