--- a/src/scss/blocks/request/_block/_block.scss
+++ b/src/scss/blocks/request/_block/_block.scss
@@ -43,6 +43,14 @@
     }
 }
 
+@media (min-width: 1590px) {
+    .request{
+        &__block{
+            min-width: 812px;
+        }
+    }
+}
+
 @media (max-width: 536px) {
     .request{
         &__block{
