--- a/src/scss/mobile/footer/__map/__map.scss
+++ b/src/scss/mobile/footer/__map/__map.scss
@@ -13,7 +13,7 @@
 @media (min-width: 1194px) {
     .footer{
         &__map{
-            width: 1162px;
+            width: 100%;
         }
     }
 }
