--- a/src/scss/mobile/reviews/-doctors/__items/__card/__card.scss
+++ b/src/scss/mobile/reviews/-doctors/__items/__card/__card.scss
@@ -8,7 +8,7 @@
     background-color: #FFFFFF;
     background-repeat: no-repeat;
     background-position: right 10px;
-    background-size: 173px 270px;
+    background-size: auto 270px;
     border-radius: 16px;
 }
 
