--- a/src/scss/blocks/galery/_imgs/_imgs.scss
+++ b/src/scss/blocks/galery/_imgs/_imgs.scss
@@ -34,6 +34,23 @@
     }
 }
 
+@media (min-width: 1590px) {
+    .galery__imgs{
+        grid-template-columns: auto auto auto;
+        grid-template-rows: unset;
+        grid-template-areas: 
+        "img1 img2 img3";
+
+        &--img{
+            min-width: 400px;
+            &:nth-of-type(3){
+                transform: unset;
+            }
+        }
+    }
+}
+
+
 
 @media (max-width: 750px) {
     .galery__imgs{
