--- a/src/scss/blocks/message/btn-answer/_btn.scss
+++ b/src/scss/blocks/message/btn-answer/_btn.scss
@@ -20,6 +20,7 @@
     justify-content: center;
     align-items: center;
     transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    margin-top: 24px;
 
     &:hover{
       background-color: rgb(76, 63, 255);
