--- a/src/scss/blocks/patquest/_mainBlock/_mainBlock.scss
+++ b/src/scss/blocks/patquest/_mainBlock/_mainBlock.scss
@@ -42,3 +42,23 @@
         }
     }
 }
+
+@media (min-width: 1590px) {
+    .patquest{
+        &__mainBlock{
+            width: 1640px;
+            padding: 35px;
+
+            &--itemBG{
+                min-width: 700px;
+                min-height: 400px;
+            }
+
+            &--item{
+                &:nth-of-type(2){ 
+                    padding-top: 50px; 
+                }
+            }
+        }
+    }
+}
