--- a/src/scss/blocks/steps/_title/_title.scss
+++ b/src/scss/blocks/steps/_title/_title.scss
@@ -13,7 +13,6 @@
             font-weight: 800;
             display: flex;
             flex-direction: column;
-            text-align: center;
 
             &_whiteGreen{
                 color: rgba(92, 195, 123, 1);
@@ -41,7 +40,6 @@
             font-weight: 400;
             letter-spacing: 0.25px;
             color: rgba(45, 45, 45, 1);
-            text-align: center;
         }
     }
 }
@@ -52,6 +50,11 @@
             align-items: center;
             &-h{
                 font-size: 24px;
+                text-align: center;
+            }
+
+            &-p2{
+                text-align: center;
             }
         }
     }
