--- a/src/scss/mobile/calculation/__block/__block.scss
+++ b/src/scss/mobile/calculation/__block/__block.scss
@@ -82,3 +82,10 @@
     }
   }
 }
+
+@media screen and (max-width: 755px){
+  .calculation__block{
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
