--- a/src/scss/mobile/calculation/calculation.scss
+++ b/src/scss/mobile/calculation/calculation.scss
@@ -1,7 +1,12 @@
 .calculation {
 
-  padding: 80px 0;
+  padding: 70px 0;
+  padding-bottom: 2px;
   background-color: #f7f6fb;
+
+  & .container{
+    max-width: calc(100dvw - 32px);
+  }
 
   @media screen and (min-width: 1194px) {
 
@@ -27,11 +32,43 @@
   
   &__items {
     
-    overflow: scroll;
+    // overflow: scroll;
     display: flex;
     gap: 16px;
     scrollbar-width: none;
-    padding-top: 38px;
+    padding-top: 48px;
+    padding-bottom: 68px;
+    width: 100%;
+    justify-content: center;
+
+    &::-webkit-scrollbar{
+      display: none;
+      width: 0px;
+      height: 0px;
+    }
   }
 
 }
+
+@media (max-width: 1194px) {
+  .calculation{
+    &__items{
+      overflow: scroll;
+    }
+  }
+}
+
+@media screen and (max-width: 755px) {
+    .calculation{
+      & .container{
+        max-width: 100dvw;
+        padding: 0px;
+      }
+
+      &__items{
+        justify-content: flex-start;
+        padding-left: 16px;
+        padding-right: 16px;
+      }
+    }
+  }
